<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/11 19:59
 */

namespace DesignPatterns\Creational\AbstractFactory\Cat;

interface Cat
{
    public function voice();
}