<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/11 20:02
 */

namespace DesignPatterns\Creational\AbstractFactory\Dog;

interface Dog
{
    public function voice();
}